// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series properly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  padding: 20px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  width: 100%;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-weight: 600;
  font-size: 22px;
  line-height: 32px;
  color: white;
  text-align: center;
}

.c21 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.c22 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c23 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  margin-bottom: 20px;
}

.c25 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c33 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 1em;
}

.c39 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c16 {
  color: white;
}

.c17 {
  margin-bottom: 40px;
}

.c27 {
  margin-bottom: 10px;
  margin-left: 0px;
  width: 100%;
}

.c36 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 40px;
}

.c5 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c3 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c3 .IconPlus-s1uyfpws-0 {
  margin: 0 20px;
}

.c3 .c4 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c6 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c6 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c35 {
  margin: 10px 20px 0 0;
}

.c35::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c24 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c32 {
  width: 32px;
  height: 32px;
}

.c29 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c26 {
  position: relative;
  height: inherit;
  background: white;
}

.c18 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c18 .c28 {
  opacity: 1;
}

.c18:hover .c28 {
  opacity: 0.7;
}

.c30 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c30 svg {
  height: 40px;
}

.c8 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c9 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c10 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c41 {
  position: relative;
  width: 100%;
}

.c41 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, white 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c41 a:hover {
  color: white;
  opacity: .65;
}

.c41 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c41 p,
.c41 ul,
.c41 ol,
.c41 .paragraph,
.c41 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c41 p:first-child,
.c41 .paragraph:first-child,
.c41 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c41 p:last-child,
.c41 .paragraph:last-child,
.c41 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c41 ul,
.c41 ol {
  padding-left: 1em;
}

.c41 ul {
  list-style: disc;
}

.c41 ol {
  list-style: decimal;
}

.c41 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c41 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c41 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c41 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c41 h2 a {
  background-size: 1.25px 1px;
}

.c41 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c41 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c41 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c41 h3 a {
  background-size: 1.25px 1px;
}

.c41 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c41 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c41 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c41 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c41 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c14 {
  color: white;
  text-align: center;
}

.c14 .PartnerBlock__ImageContainer-ydgi2-1 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c14 .PartnerBlock__ImageContainer-ydgi2-1 img {
  margin-left: auto;
  margin-right: auto;
}

.c15 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.c12 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c12 .c13 {
  margin-bottom: 90px;
}

.c0 {
  color: white;
}

.c0 .c11 {
  padding: 90px 20px 150px;
}

@media screen and (min-width:40em) {
  .c19 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media screen and (min-width:52em) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c19 {
    padding: 20px;
  }
}

@media screen and (min-width:52em) {
  .c19 {
    padding: 30px;
  }
}

@media screen and (min-width:64em) {
  .c19 {
    padding: 30px;
  }
}

@media screen and (min-width:40em) {
  .c20 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:52em) {
  .c20 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:64em) {
  .c20 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:40em) {
  .c20 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c20 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c20 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c37 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c37 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c37 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c38 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c38 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c38 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c40 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c40 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c40 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c22 {
    font-size: 28px;
  }
}

@media screen and (min-width:52em) {
  .c22 {
    font-size: 42px;
  }
}

@media screen and (min-width:64em) {
  .c22 {
    font-size: 42px;
  }
}

@media screen and (min-width:40em) {
  .c22 {
    line-height: 36px;
  }
}

@media screen and (min-width:52em) {
  .c22 {
    line-height: 50px;
  }
}

@media screen and (min-width:64em) {
  .c22 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    font-size: 18px;
  }
}

@media screen and (min-width:52em) {
  .c23 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c23 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    line-height: 26px;
  }
}

@media screen and (min-width:52em) {
  .c23 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c23 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c39 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c39 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c39 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:40em) {
  .c17 {
    margin-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c27 {
    margin-bottom: 10px;
    margin-left: 0px;
  }
}

@media screen and (min-width:52em) {
  .c27 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:64em) {
  .c27 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:40em) {
  .c27 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c27 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c27 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c36 {
    padding-top: 40px;
  }
}

@media screen and (min-width:52em) {
  .c36 {
    padding-top: 60px;
  }
}

@media (max-width:720px) {
  .c3 img {
    max-height: 24px;
  }

  .c3 .c4 {
    font-size: 24px;
  }

  .c3 .IconPlus-s1uyfpws-0 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c30 svg {
    height: 30px;
  }
}

@media (max-width:600px) {
  .c41 p,
  .c41 ul,
  .c41 ol,
  .c41 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c41 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c41 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c41 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c41 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c41 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c41 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c41 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c14 .PartnerBlock__ImageContainer-ydgi2-1 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c15 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 c2"
      color="white"
    >
      <div
        className="PartnerInline c3"
      >
        <a
          href="/"
        >
          <div
            className="c4 c5"
          >
            
          </div>
        </a>
        
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c6 c7"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    />
    <div
      className="c10"
    />
  </div>
  <div
    className="c11 c12"
  >
    <div
      className="SeriesTitle c13 c14"
      color="white"
    >
      <div
        className="c15"
      >
        The Future of Art
      </div>
    </div>
    <div
      className="c16"
      color="white"
    >
      <div
        className="c17"
      >
        <a
          className="ArticleCard c18"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="c19"
          >
            <div
              className="c20"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c21"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c22"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="c23"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c24"
              >
                <div
                  className="c25"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c26 c27"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c28 c29"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c30 c31"
              >
                <svg
                  className="c32"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="c33"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="c17"
      >
        <a
          className="ArticleCard c18"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="c19"
          >
            <div
              className="c20"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c21"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c22"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="c23"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c34"
                color="white"
              >
                <div
                  className="c25"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c35"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c26 c27"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c28 c29"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c36"
    >
      <div
        className="c37"
        color="white"
        width="100%"
      >
        <div
          className="c38"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div
            className="c39"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize="28px"
          >
            About the Series
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          />
        </div>
        <div
          className="c40"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c41"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a sponsored series properly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  padding: 20px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  width: 100%;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c9 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-weight: 600;
  font-size: 22px;
  line-height: 32px;
  color: white;
  text-align: center;
}

.c27 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.c28 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c29 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  margin-bottom: 20px;
}

.c31 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c39 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 1em;
}

.c45 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c22 {
  color: white;
}

.c23 {
  margin-bottom: 40px;
}

.c33 {
  margin-bottom: 10px;
  margin-left: 0px;
  width: 100%;
}

.c42 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 40px;
}

.c46 {
  margin-bottom: 4px;
}

.c49 {
  margin-top: 60px;
}

.c5 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c7 {
  width: 15px;
  height: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c3 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c3 .c6 {
  margin: 0 20px;
}

.c3 .c4 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c8 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c8 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c41 {
  margin: 10px 20px 0 0;
}

.c41::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c30 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c38 {
  width: 32px;
  height: 32px;
}

.c35 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c32 {
  position: relative;
  height: inherit;
  background: white;
}

.c24 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c24 .c34 {
  opacity: 1;
}

.c24:hover .c34 {
  opacity: 0.7;
}

.c36 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c36 svg {
  height: 40px;
}

.c10 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c11 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c12 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c18 {
  display: block;
}

.c21 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c19 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c48 {
  position: relative;
  width: 100%;
}

.c48 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, white 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c48 a:hover {
  color: white;
  opacity: .65;
}

.c48 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c48 p,
.c48 ul,
.c48 ol,
.c48 .paragraph,
.c48 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c48 p:first-child,
.c48 .paragraph:first-child,
.c48 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c48 p:last-child,
.c48 .paragraph:last-child,
.c48 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c48 ul,
.c48 ol {
  padding-left: 1em;
}

.c48 ul {
  list-style: disc;
}

.c48 ol {
  list-style: decimal;
}

.c48 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c48 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c48 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c48 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c48 h2 a {
  background-size: 1.25px 1px;
}

.c48 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c48 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c48 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c48 h3 a {
  background-size: 1.25px 1px;
}

.c48 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c48 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c48 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c48 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c48 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c16 {
  color: white;
  text-align: center;
}

.c16 .c20 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c16 .c20 img {
  margin-left: auto;
  margin-right: auto;
}

.c17 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.bhMdnS .c15 {
  margin-bottom: 90px;
}

.c14 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c14 .c15 {
  margin-bottom: 60px;
}

.c0 {
  color: white;
}

.c0 .c13 {
  padding: 90px 20px 150px;
}

@media screen and (min-width:40em) {
  .c25 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media screen and (min-width:52em) {
  .c25 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c25 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c25 {
    padding: 20px;
  }
}

@media screen and (min-width:52em) {
  .c25 {
    padding: 30px;
  }
}

@media screen and (min-width:64em) {
  .c25 {
    padding: 30px;
  }
}

@media screen and (min-width:40em) {
  .c26 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:52em) {
  .c26 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:64em) {
  .c26 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:40em) {
  .c26 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c26 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c26 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c43 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c43 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c43 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c44 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c44 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c44 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c47 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c47 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c47 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c28 {
    font-size: 28px;
  }
}

@media screen and (min-width:52em) {
  .c28 {
    font-size: 42px;
  }
}

@media screen and (min-width:64em) {
  .c28 {
    font-size: 42px;
  }
}

@media screen and (min-width:40em) {
  .c28 {
    line-height: 36px;
  }
}

@media screen and (min-width:52em) {
  .c28 {
    line-height: 50px;
  }
}

@media screen and (min-width:64em) {
  .c28 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c29 {
    font-size: 18px;
  }
}

@media screen and (min-width:52em) {
  .c29 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c29 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c29 {
    line-height: 26px;
  }
}

@media screen and (min-width:52em) {
  .c29 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c29 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c45 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c45 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c45 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    margin-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c33 {
    margin-bottom: 10px;
    margin-left: 0px;
  }
}

@media screen and (min-width:52em) {
  .c33 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:64em) {
  .c33 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:40em) {
  .c33 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c33 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c33 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c42 {
    padding-top: 40px;
  }
}

@media screen and (min-width:52em) {
  .c42 {
    padding-top: 60px;
  }
}

@media (max-width:900px) {
  .c7 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c3 img {
    max-height: 24px;
  }

  .c3 .c4 {
    font-size: 24px;
  }

  .c3 .c6 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c36 svg {
    height: 30px;
  }
}

@media (max-width:720px) {
  .c19 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c48 p,
  .c48 ul,
  .c48 ol,
  .c48 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c48 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c48 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c48 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c48 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c48 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c48 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c48 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c16 .c20 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c17 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 c2"
      color="white"
    >
      <div
        className="PartnerInline c3"
      >
        <a
          href="/"
        >
          <div
            className="c4 c5"
          >
            
          </div>
        </a>
        <svg
          className="c6 c7"
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="2"
          >
            <g
              fill="white"
              transform="translate(-101.000000, -18.000000)"
            >
              <g
                transform="translate(101.000000, 18.000000)"
              >
                <rect
                  height="1"
                  width="15"
                  x="0"
                  y="7"
                />
                <rect
                  height="1"
                  transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
                  width="15"
                  x="0"
                  y="7"
                />
              </g>
            </g>
          </g>
        </svg>
        <a
          href="http://artsy.net"
          onClick={[Function]}
          target="_blank"
        >
          <img
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
          />
        </a>
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c8 c9"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c10"
  >
    <div
      className="c11"
    />
    <div
      className="c12"
    />
  </div>
  <div
    className="c13 c14"
  >
    <div
      className="SeriesTitle c15 c16"
      color="white"
    >
      <div
        className="c17"
      >
        The Future of Art
      </div>
      <div
        className="PartnerBlock c18"
      >
        <div
          className="c19"
        >
          Presented in Partnership with
        </div>
        <div
          className="c20 c21"
        >
          <a
            href="http://artsy.net"
            onClick={[Function]}
            target="_blank"
          >
            <img
              src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="c22"
      color="white"
    >
      <div
        className="c23"
      >
        <a
          className="ArticleCard c24"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="c25"
          >
            <div
              className="c26"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c27"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c28"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="c29"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c30"
              >
                <div
                  className="c31"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c32 c33"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c34 c35"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c36 c37"
              >
                <svg
                  className="c38"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="c39"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="c23"
      >
        <a
          className="ArticleCard c24"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="c25"
          >
            <div
              className="c26"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c27"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c28"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="c29"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c40"
                color="white"
              >
                <div
                  className="c31"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c41"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c30"
                >
                  <div
                    className="c31"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c32 c33"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c34 c35"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c42"
    >
      <div
        className="c43"
        color="white"
        width="100%"
      >
        <div
          className="c44"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div
            className="c45"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize="28px"
          >
            About the Series
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          >
            <div
              className="c46"
            >
              <div
                className="PartnerBlock c18"
              >
                <div
                  className="c19"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c20 c21"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c47"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c48"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          >
            <div
              className="c49"
            >
              <div
                className="PartnerBlock c18"
              >
                <div
                  className="c19"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c20 c21"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
